# personal-trainer

./: .gitignore  CLAUDE.md  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agent/: decision.py  llm.py  rules.py
backend/app/api/: routes.py  schemas.py
backend/app/graph/: model.py  seed.py  traversal.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AgentDecision.tsx  ChatPanel.tsx  ClientProfile.tsx  DecisionTracePanel.tsx  EventFeed.tsx  GraphCanvas.tsx  RecommendationPanel.tsx  Sidebar.tsx  SorenessButton.tsx  StateClock.tsx  TodayProgram.tsx  Trajectory.tsx
frontend/src/context/: EphemeralGraph.tsx
frontend/src/pages/: ClientView.tsx  GraphView.tsx
