[project]
name = "personal-trainer-backend"
version = "0.1.0"
description = "Personal Trainer — Context Graph API"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "networkx==3.3",
    "anthropic==0.34.2",
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
